--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WAR Card Game</title>
+    <title>War Card Game!</title>
 </head>
-    <script src="script.js"></script>
-</head>
+
 <body>
-    
+    <h1 class="score-title">Let the War Begin!</h1> 
+    <div class="button-container">
+        <button class="button" id="startbutton" onclick="war.start();">Play Game!</button>
+    </div>
+    <div class="player-container">
+        <div class="row">
+            <div class="column" id="player-one-container">
+                <h1 id="one" class="player">Player 1</h1>
+                <ul class="player-one-score"></ul>
+                <h2 id="player-one-total-score">Score: 0</h2>
+            </div>
+            <div class="column" id="score">
+                <ul class="score-list"></ul>
+                <h2 id="winner"></h2>
+            </div>
+            <div class="column" id="player-two-container">
+                <h1 id="two" class="player">Player 2</h1>
+                <ul class="player-two-score"></ul>
+                <h2 id="player-two-total-score">Score: 0</h2>
+            </div>
+        </div>
+    </div>
+
+    <script src="wargame.js"></script>
 </body>
 </html>
